# Generated by Django 6.1 on 2026-09-11 19:43

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Author',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=200)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('bio', models.TextField(blank=True)),
                ('fecha_nacimiento', models.DateField(blank=True, null=True)),
            ],
            options={
                'verbose_name': 'Author',
                'verbose_name_plural': 'Authors',
            },
        ),
        migrations.CreateModel(
            name='Category',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100, unique=True)),
                ('descripcion', models.TextField(blank=True)),
            ],
            options={
                'verbose_name': 'Category',
                'verbose_name_plural': 'Categories',
            },
        ),
        migrations.CreateModel(
            name='Publisher',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=200, unique=True)),
                ('direccion', models.CharField(blank=True, max_length=300)),
                ('ciudad', models.CharField(blank=True, max_length=100)),
                ('sitio_web', models.URLField(blank=True)),
            ],
            options={
                'verbose_name': 'Publisher',
                'verbose_name_plural': 'Publishers',
            },
        ),
        migrations.CreateModel(
            name='AuthorProfile',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('direccion', models.CharField(blank=True, max_length=300)),
                ('telefono', models.CharField(blank=True, max_length=20)),
                ('foto', models.ImageField(blank=True, null=True, upload_to='authors/')),
                ('author', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='profile', to='library.author')),
            ],
            options={
                'verbose_name': 'Author Profile',
                'verbose_name_plural': 'Author Profiles',
            },
        ),
        migrations.CreateModel(
            name='Book',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('titulo', models.CharField(max_length=300)),
                ('isbn', models.CharField(max_length=13, unique=True)),
                ('fecha_publicacion', models.DateField(blank=True, null=True)),
                ('sinopsis', models.TextField(blank=True)),
                ('portada', models.ImageField(blank=True, null=True, upload_to='books/')),
                ('autor', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='books', to='library.author')),
                ('categorias', models.ManyToManyField(related_name='books', to='library.category')),
            ],
            options={
                'verbose_name': 'Book',
                'verbose_name_plural': 'Books',
                'ordering': ['titulo'],
            },
        ),
        migrations.CreateModel(
            name='Publication',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha_publicacion', models.DateField()),
                ('edicion', models.CharField(blank=True, max_length=50)),
                ('libro', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='publications', to='library.book')),
                ('editorial', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='publications', to='library.publisher')),
            ],
            options={
                'verbose_name': 'Publication',
                'verbose_name_plural': 'Publications',
                'unique_together': {('libro', 'editorial')},
            },
        ),
        migrations.AddField(
            model_name='book',
            name='editorial',
            field=models.ManyToManyField(related_name='books', through='library.Publication', through_fields=('libro', 'editorial'), to='library.publisher'),
        ),
    ]
